@@ -17,6 +17,7 @@ export(generateNoise)
 export(getEntropy)
 export(getIntegerRandomWalk)
 export(getLoudness)
+export(getLoudnessFolder)
 export(getRMS)
 export(getRMSFolder)
 export(getRandomWalk)
